# inmoov_base

./: .$ExecutionFlow.drawio.bkp  .$ExecutionFlow.drawio.dtmp  .$inmoov_base.drawio.bkp  .$inmoov_base.drawio.dtmp  .$inmoov_base2.drawio.bkp  .gitignore  CMakeLists.txt  ExecutionFlow.drawio  README.md  Untitled Diagram.drawio  inmoov_base.drawio  notes.md  package.xml  readme.md
config/: controllers.yaml  drive_bot.rviz  joystick.yaml  my_controllers.yaml  ros_gz_bridge.yaml  ros_gz_bridge_backup.yaml  rrbot_controllers.yaml  rrbot_joint_trajectory_publisher.yaml  rviz.config.rviz
config/gz/: gazebo_controllers.yaml
config/rviz/: default.rviz  drive_bot.rviz
description/: camera.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  gazebo_ros_joint_state_publisher.xacro  geometry_formulas.odg  inertial_macros.xacro  inmoov.urdf.xacro  lidar.xacro  robot.urdf.xacro  robot_core copy.xacro  robot_core.xacro  robot_gazebo.xacro  robot_gz_sim.xacro  ros2_control.mock.hardware.xacro  ros2_control.real.hardware.xacro  ros2_control.xacro  ros2_control_non_gz_sim.xacro  rrbot.urdf.xacro  simple.urdf.xacro
docs/: commands.md  launching.md  notes.md
launch/: ball_tracker.launch.py  bringup.launch.py  broken_jsp.launch.py  gazebo.launch.py  gz_ros2_control_sim.launch.py  gz_sim.launch_backup.py  joystick.launch.py  launch.launch.py  launch.sim.launch.py  launch_gz_ros2_control_sim.launch.py  launch_gz_sim_only.py  launch_micro_sim.launch.py  launch_robot.launch copy.py  launch_robot.launch.py  launch_robot.launch.py.lastest.but.broken  launch_robot.launch.py.original.backup  launch_robot_copy.launch.py  launch_robot_orig.launch.py  launch_sim.launch copy.py  launch_sim.launch.py  microros_agent.launch.py  navigation_launch.py  online_async_launch.py  ros2_control.launch.py  ros_gz_bridge.launch.py  rplidar.launch.py  rsp.launch.py  rsp.launch.py.working.backup  teleop_twist_joy.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
launch/old_launchers/: bringup.launch_copy.py  gazebo_spawn.launch.py  jsp.launch.py  launch_robot.launch.py  launch_sim.launch.py
worlds/: building.world  building_robot.sdf  ignition_world.sdf  ignition_world_empty_template.sdf
