<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inmoov_base</name>
  <version>0.0.1</version>
  <description>InMoov Bringup</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Specify the build tools that are needed to compile the package -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- ROS2 components -->
  <depend>std_msgs</depend>
  <!-- <depend>ros2_control</depend> -->

  <!-- Gazebo dependancies -->
  <exec_depend>joint_state_publsiher</exec_depend>
  <exec_depend>robot_state_publsiher</exec_depend>
  <!-- <exec_depend>gazebo_ros</exec_depend>   # This is a meta package -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  


  <!-- <depend>gz_cmake_vendor</depend> -->
  <!-- <depend>gz_utils_vendor</depend> -->
  <!-- <depend>gz_math_vendor</depend> -->




  <!--Specifies dependencies that are only needed for testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  
  <!-- It was suggested by https://roboticscasual.com/tutorial-ros2-launch-files-all-you-need-to-know/ -->
  <!--   to add this dependency.  Not sure if it is actually required -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
